feat: add endpoint to create a candidate with default profile picture and resume
